Cleanup; remove unused imports